Finished working on the database. Have to finish all dao layer with application layer
